👌 IMPROVE: improve equations

--- a/docs/equations/1.tex
+++ b/docs/equations/1.tex
@@ -12,8 +12,7 @@
   \tag{1} \label{eq:1}
     M_R  \frac{\mathrm{d} T_R}{\mathrm{d} t} = \dot{Q}_W(t) + \dot{Q}_R + \dot{Q}_D(t) - \dot{Q}_F(t) - \dot{Q}_{inf/ven}(t)
 \end{align}
-
-where
+where:
 \begin{conditions*}
  \dot{Q}_W(t)  &  heat flux through the walls \\
  \dot{Q}_R  &  heat flux through the roof \\
