--- a/docs/equations/4.tex
+++ b/docs/equations/4.tex
@@ -43,11 +43,11 @@ where:
 \end{align}
 
 on simplification,
-\begin{align}
+\begin{align*}
   \tag{4.6} \label{eq:4.6}
     M_w \frac{\partial T_w}{\partial t} + \dot{m_w} C_w \frac{\partial T_w}{\partial y} &= bH(T_S-T_w) + bh_1 (\left. \theta_1 \right\vert_{x=0} - T_w) \\
   \tag{4.7} \label{eq:4.7}
-    T_s &= 1/H (\tau_1S(t) + H_1T_A(t) - R_0R_2(1-r)) \\
+    T_s &= \frac{1}{H} (\tau_1S(t) + H_1T_A(t) - R_0R_2(1-r)) \\
   \tag{4.8} \label{eq:4.8}
     H &= h_r + h_c + R_0R_1 \\
   \tag{4.9} \label{eq:4.9}
@@ -58,6 +58,6 @@ on simplification,
     M_w &= bdC_wS_w \\
   \tag{4.12} \label{eq:4.12}
     \dot{Q}(y,t) &= h_i[\theta|_{x=x_4} - T_R]
-\end{align}
+\end{align*}
 
 \end{document}
