--- a/docs/equations/5.tex
+++ b/docs/equations/5.tex
@@ -10,6 +10,11 @@
     T_w(y,t) &= T_{wo}(y) + Re\left( \sum_{n=1}^{\infty} T_{wn} e^{inwt} \right)
 \end{align}
 
+\begin{align}
+  \tag{i} \label{eq:i}
+    \dot{m}_w&=0 && \text{for an open roof pond} \\
+  \tag{ii} \label{eq:ii}
+    M_w=0,\ \dot{m}_w&=0 && \text{for water film, spray, gunny bag system}
+\end{align}
+
 \end{document}
-
-
