--- a/code/SymPy Solver.ipynb
+++ b/code/SymPy Solver.ipynb
@@ -117,7 +117,7 @@
    "id": "44387009-f3b6-4350-b32a-872109fd60e9",
    "metadata": {},
    "source": [
-    "# Equations"
+    "### Equations"
    ]
   },
   {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 82,
    "id": "native-poetry",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
     "Gr = 1225 * (T_w/T_a - 1) * nu**-2\n",
     "display(Gr[0])\n",
     "\n",
-    "h_1 = 8.4 * (Gr*Pr)**(1/3)\n",
+    "h_1 = 8.4 * pow(Gr*Pr, 1/3)\n",
     "display(h_1[0])"
    ]
   },
@@ -200,10 +200,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming T_w = 285 and T_a = 280\n",
+    "# Example: Assume T_w = 285 and T_a = 280\n",
     "display(\"h_1 = \", h_1[0].replace(T_w, 285))\n",
     "display(\"H = \", H[0].replace(T_w, 285))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f95a056e-7b33-4e92-b3e5-95651e4d2fb7",
+   "metadata": {},
+   "source": [
+    "### Finally solving for $T_w$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "04e9ec92-710c-4444-93e9-43cb7b056956",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\theta_{1}$"
+      ],
+      "text/plain": [
+       "theta_1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{1544450.65885947 \\theta_{1} \\left(0.00357142857142857 T_{w} - 1\\right)^{0.333333333333333} + 12826.36425 + \\frac{280 \\left(5.3865 \\cdot 10^{-8} T_{w}^{4} - 46.5242605632\\right)}{T_{w} - 280}}{1544450.65885947 \\left(0.00357142857142857 T_{w} - 1\\right)^{0.333333333333333} + 99.7975 + \\frac{5.3865 \\cdot 10^{-8} T_{w}^{4} - 46.5242605632}{T_{w} - 280}}$"
+      ],
+      "text/plain": [
+       "(1544450.65885947*theta_1*(0.00357142857142857*T_w - 1)**0.333333333333333 + 12826.36425 + 280*(5.3865e-8*T_w**4 - 46.5242605632)/(T_w - 280))/(1544450.65885947*(0.00357142857142857*T_w - 1)**0.333333333333333 + 99.7975 + (5.3865e-8*T_w**4 - 46.5242605632)/(T_w - 280))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "theta_1 = sp.symbols('theta_1')\n",
+    "lhs = (H*T_s + h_1*theta_1)/(H + h_1)\n",
+    "display(theta_1, lhs[0])\n",
+    "\n",
+    "# exp = sp.Eq(T_w, H[0])\n",
+    "# display(exp, H[0]*T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed69246-a163-41dc-88da-57d9d36ce300",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1d144b-941a-41dc-ae17-1c5c977051d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
