👌 IMPROVE: Goal 2 Attempt 3 added

--- a/code/Goal 2/heat_flux_no_water.ipynb
+++ b/code/Goal 2/heat_flux_no_water.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d71d3c3-2a8d-4b20-963b-fa81f0156184",
    "metadata": {},
    "outputs": [],
@@ -21,69 +21,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a0066d11-e88f-42b1-8c37-0a23e737345b",
+   "execution_count": 50,
+   "id": "3de1654f-8728-4653-8d29-7fa61fb35518",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Net Resistance = 0.181 m^2*K/W\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 544444.444444445 T_{oo} + 544444.444444445 T_{s}$"
+      ],
+      "text/plain": [
+       "-544444.444444445*T_oo + 544444.444444445*T_s"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "h_o = 22.78 # wrt avg wind velocity of 10.2 km/h\n",
-    "h_i = 8.4\n",
+    "# T_oo = np.array([300, 305, 310, 315, 320, 325, 330]) # T_oo\n",
+    "T_oo = sp.symbols('T_oo')\n",
+    "T_s = sp.symbols('T_s')\n",
     "\n",
-    "k_1 = 0.72 # Concrete\n",
-    "k_2 = 0.71 # Brick\n",
-    "k_3 = 0.731 # Lime\n",
+    "delta_T = T_s - T_oo\n",
+    "# delta_T = 30 # (Assume)\n",
     "\n",
-    "L_1 = 0.05 # Concrete\n",
-    "L_2 = 0.1 # Brick\n",
-    "L_3 = 0.05 # Lime\n",
-    "A = 15.43\n",
+    "#T_f = (T_oo + T_s) / 2\n",
+    "T_f = 320\n",
+    "beta = 1/T_f\n",
     "\n",
-    "R = 1/h_o + (1/A) * (L_1/k_1 + L_2/k_2 + L_3/k_3) + 1/h_i\n",
+    "# cement=5cm, brick=10cm, lime=5cm\n",
+    "L = 0.2\n",
+    "g = 9.8\n",
     "\n",
-    "print(f\"Net Resistance = {round(R, 3)} m^2*K/W\")"
+    "# linear interpolation\n",
+    "# nu = 1e-6 * np.array([15.9, 16.4, 16.9, 17.4, 17.9, 18.4, 18.9])\n",
+    "# alpha = 1e-6 * np.array([22.50, 23.25, 24.0, 24.75, 25.50, 26.25, 27.00])\n",
+    "nu = 18e-6\n",
+    "alpha = 25e-6\n",
+    "\n",
+    "Ra_L = (g * beta * delta_T * L**3) / (nu * alpha)\n",
+    "display(Ra_L)\n",
+    "# print('Raleigh Number =', Ra_L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
+   "id": "a0066d11-e88f-42b1-8c37-0a23e737345b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 12.248299083566 \\left(- T_{oo} + T_{s}\\right)^{0.333333333333333}$"
+      ],
+      "text/plain": [
+       "12.248299083566*(-T_oo + T_s)**0.333333333333333"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Nu_L = 0.15 * Ra_L**(1/3)\n",
+    "display(Nu_L)\n",
+    "# print('Nusselt Number =', Nu_L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "93f26975-f408-4760-9bc2-c57b98a0b115",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle 1.69638942307389 \\left(- T_{oo} + T_{s}\\right)^{0.333333333333333}$"
+      ],
       "text/plain": [
-       "array([-27.62319885,   0.        ,  27.62319885,  55.2463977 ,\n",
-       "        82.86959655, 110.4927954 , 138.11599424, 165.73919309])"
+       "1.69638942307389*(-T_oo + T_s)**0.333333333333333"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "T_a = np.array([295, 300, 305, 310, 315, 320, 325, 330]) # unit K\n",
-    "T_r = 300 # Assuming 27°C\n",
-    "\n",
-    "q_x = (T_a - T_r)/R\n",
-    "q_x"
+    "k = 27.7e-3\n",
+    "h_t = k/L * Nu_L\n",
+    "display(h_t)\n",
+    "# print('Convection coeff =', h_t)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de1654f-8728-4653-8d29-7fa61fb35518",
+   "id": "2e6b1150-c4c5-4dd7-8d0a-ce2ad8f274d4",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d6e8f82-9cdd-40ab-80f2-320156925468",
+   "metadata": {},
+   "source": [
+    "References: Incorpera  \n",
+    "eqns: pg 611, table 995"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
