👌 IMPROVE: Goal 2 docs complete

--- a/code/Goal 2/heat_flux_no_water.ipynb
+++ b/code/Goal 2/heat_flux_no_water.ipynb
@@ -201,10 +201,10 @@
     "\n",
     "k_1 = 0.72 # Concrete\n",
     "k_2 = 0.71 # Brick\n",
-    "k_3 = 0.731 # Lime\n",
+    "k_3 = 0.73 # Lime\n",
     "\n",
     "L_1 = 0.05 # Concrete\n",
-    "L_2 = 0.1 # Brick\n",
+    "L_2 = 0.10 # Brick\n",
     "L_3 = 0.05 # Lime\n",
     "\n",
     "R = 1/h_inside + L_1/k_1 + L_2/k_2 + L_3/k_3 # K/W\n",
@@ -232,11 +232,11 @@
     }
    ],
    "source": [
-    "T_inside = 300 # K, Constant temperature room \n",
+    "T_r = 300 # K, Constant temperature room \n",
     "\n",
-    "# q_net = (T_s - T_inside) / R\n",
-    "# q_net - (T_s - T_inside) / R = 0\n",
-    "final_eqn = q_net - (T_s-T_inside)/R\n",
+    "# q_net = (T_s - T_r) / R\n",
+    "# q_net - (T_s - T_r) / R = 0\n",
+    "final_eqn = q_net - (T_s-T_r)/R\n",
     "display(final_eqn[0])"
    ]
   },
