👌 IMPROVE: Water layer case solved fully

--- a/code/Goal 1/heat_flux_no_water.ipynb
+++ b/code/Goal 1/heat_flux_no_water.ipynb
@@ -5,12 +5,12 @@
    "id": "cdb4cba1-d7fb-48ef-b2ec-6dba72ba5385",
    "metadata": {},
    "source": [
-    "# Goal 2: Calculate $R_{net}$ & $\\dot{q}_x$ *(No Water Layer)*"
+    "# (Attempt 3) Goal 2: No Water Layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8d71d3c3-2a8d-4b20-963b-fa81f0156184",
    "metadata": {},
    "outputs": [],
@@ -20,8 +20,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af820895-80c4-498c-8013-1d3eb85aab7e",
+   "metadata": {},
+   "source": [
+    "## **Initialize Values**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750ef87b-3179-4564-a2ba-357a85e38e3d",
+   "metadata": {},
+   "source": [
+    "### Outside Air:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "3de1654f-8728-4653-8d29-7fa61fb35518",
    "metadata": {},
    "outputs": [
@@ -42,24 +58,19 @@
     }
    ],
    "source": [
-    "T_oo = np.array([300, 305, 310, 315, 320, 325, 330]) # T_oo\n",
-    "# T_oo = sp.symbols('T_oo')\n",
+    "T_oo = np.array([300.0, 305.0, 310.0, 315.0, 320.0, 325.0, 330.0]) # T_oo\n",
     "T_s = sp.symbols('T_s')\n",
     "\n",
     "delta_T = T_s - T_oo\n",
-    "# delta_T = 30 # (Assume)\n",
     "\n",
     "#T_f = (T_oo + T_s) / 2\n",
-    "T_f = 320\n",
+    "T_f = 320.0\n",
     "beta = 1/T_f\n",
     "\n",
     "# cement=5cm, brick=10cm, lime=5cm\n",
     "L = 2.5 # Independant of length\n",
     "g = 9.8\n",
     "\n",
-    "# linear interpolation\n",
-    "# nu = 1e-6 * np.array([15.9, 16.4, 16.9, 17.4, 17.9, 18.4, 18.9])\n",
-    "# alpha = 1e-6 * np.array([22.50, 23.25, 24.0, 24.75, 25.50, 26.25, 27.00])\n",
     "nu = 18e-6\n",
     "alpha = 25e-6\n",
     "\n",
@@ -69,8 +80,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "840531ec-5848-44cc-b46d-30349bb4f5ba",
+   "metadata": {},
+   "source": [
+    "### Roof layers:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
+   "id": "dde5ccba-2ef7-4ef5-84fc-19a2de97b3e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_1 = 0.72 # Concrete\n",
+    "k_2 = 0.71 # Brick\n",
+    "k_3 = 0.73 # Lime\n",
+    "\n",
+    "L_1 = 0.05 # Concrete\n",
+    "L_2 = 0.10 # Brick\n",
+    "L_3 = 0.05 # Lime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "a0066d11-e88f-42b1-8c37-0a23e737345b",
    "metadata": {},
    "outputs": [
@@ -99,20 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "id": "93f26975-f408-4760-9bc2-c57b98a0b115",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300),\n",
-       "       11.4189324129342*(0.00327868852459016*T_s - 1)**0.333333333333333*(T_s - 305),\n",
-       "       11.4809930469819*(0.0032258064516129*T_s - 1)**0.333333333333333*(T_s - 310),\n",
-       "       11.5423898991238*(0.00317460317460317*T_s - 1)**0.333333333333333*(T_s - 315),\n",
-       "       11.6031404386125*(0.003125*T_s - 1)**0.333333333333333*(T_s - 320),\n",
-       "       11.6632614105139*(0.00307692307692308*T_s - 1)**0.333333333333333*(T_s - 325),\n",
-       "       11.7227688763551*(0.00303030303030303*T_s - 1)**0.333333333333333*(T_s - 330)],\n",
+       "array([11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300.0),\n",
+       "       11.4189324129342*(0.00327868852459016*T_s - 1)**0.333333333333333*(T_s - 305.0),\n",
+       "       11.4809930469819*(0.0032258064516129*T_s - 1)**0.333333333333333*(T_s - 310.0),\n",
+       "       11.5423898991238*(0.00317460317460317*T_s - 1)**0.333333333333333*(T_s - 315.0),\n",
+       "       11.6031404386125*(0.003125*T_s - 1)**0.333333333333333*(T_s - 320.0),\n",
+       "       11.6632614105139*(0.00307692307692308*T_s - 1)**0.333333333333333*(T_s - 325.0),\n",
+       "       11.7227688763551*(0.00303030303030303*T_s - 1)**0.333333333333333*(T_s - 330.0)],\n",
        "      dtype=object)"
       ]
      },
@@ -130,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "2e6b1150-c4c5-4dd7-8d0a-ce2ad8f274d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-157.41598441,   20.4719614 ,  207.32698859,  403.4454964 ,\n",
-       "        609.12870359, -555.2903438 , -329.55480361])"
+       "array([2602.53      , 2780.41794581, 2967.272973  , 3163.39148081,\n",
+       "       3369.074688  , 3584.62863281, 3810.364173  ])"
       ]
      },
      "metadata": {},
@@ -156,20 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "fa63d0e9-cd85-45d2-854b-43b21d685c50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300) - 157.4159844096,\n",
-       "       11.4189324129342*(0.00327868852459016*T_s - 1)**0.333333333333333*(T_s - 305) + 20.4719614029,\n",
-       "       11.4809930469819*(0.0032258064516129*T_s - 1)**0.333333333333333*(T_s - 310) + 207.3269885904,\n",
-       "       11.5423898991238*(0.00317460317460317*T_s - 1)**0.333333333333333*(T_s - 315) + 403.4454964029,\n",
-       "       11.6031404386125*(0.003125*T_s - 1)**0.333333333333333*(T_s - 320) + 609.1287035904,\n",
-       "       11.6632614105139*(0.00307692307692308*T_s - 1)**0.333333333333333*(T_s - 325) - 555.2903438019,\n",
-       "       11.7227688763551*(0.00303030303030303*T_s - 1)**0.333333333333333*(T_s - 330) - 329.5548036144],\n",
+       "array([11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300.0) + 2602.53,\n",
+       "       11.4189324129342*(0.00327868852459016*T_s - 1)**0.333333333333333*(T_s - 305.0) + 2780.4179458125,\n",
+       "       11.4809930469819*(0.0032258064516129*T_s - 1)**0.333333333333333*(T_s - 310.0) + 2967.272973,\n",
+       "       11.5423898991238*(0.00317460317460317*T_s - 1)**0.333333333333333*(T_s - 315.0) + 3163.3914808125,\n",
+       "       11.6031404386125*(0.003125*T_s - 1)**0.333333333333333*(T_s - 320.0) + 3369.074688,\n",
+       "       11.6632614105139*(0.00307692307692308*T_s - 1)**0.333333333333333*(T_s - 325.0) + 3584.6286328125,\n",
+       "       11.7227688763551*(0.00303030303030303*T_s - 1)**0.333333333333333*(T_s - 330.0) + 3810.364173],\n",
        "      dtype=object)"
       ]
      },
@@ -184,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "4c9c6fcb-7884-491b-a005-f3abba1d5e21",
    "metadata": {},
    "outputs": [
@@ -197,34 +232,24 @@
     }
    ],
    "source": [
-    "h_inside = 8.4 # W / (m^2 K)\n",
-    "\n",
-    "k_1 = 0.72 # Concrete\n",
-    "k_2 = 0.71 # Brick\n",
-    "k_3 = 0.73 # Lime\n",
-    "\n",
-    "L_1 = 0.05 # Concrete\n",
-    "L_2 = 0.10 # Brick\n",
-    "L_3 = 0.05 # Lime\n",
-    "\n",
-    "R = 1/h_inside + L_1/k_1 + L_2/k_2 + L_3/k_3 # K/W\n",
+    "R = 1/h_r + L_1/k_1 + L_2/k_2 + L_3/k_3 # K/W\n",
     "\n",
     "print(f\"Net Resistance = {round(R, 3)} m^2*K/W\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "1afae70f-7e6c-4ba5-9555-4a166b68717f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle - 2.51422683603044 T_{s} + 11.3561897597655 \\left(0.00333333333333333 T_{s} - 1\\right)^{0.333333333333333} \\left(T_{s} - 300\\right) + 596.852066399533$"
+       "$\\displaystyle - 2.51363467968919 T_{s} + 11.3561897597655 \\left(0.00333333333333333 T_{s} - 1\\right)^{0.333333333333333} \\left(T_{s} - 300.0\\right) + 3356.62040390676$"
       ],
       "text/plain": [
-       "-2.51422683603044*T_s + 11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300) + 596.852066399533"
+       "-2.51363467968919*T_s + 11.3561897597655*(0.00333333333333333*T_s - 1)**0.333333333333333*(T_s - 300.0) + 3356.62040390676"
       ]
      },
      "metadata": {},
@@ -242,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "2e4308ed-fbdf-4952-8f24-c44973b1c7cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[344.824776346579]"
+       "[132.093479425268 - 221.349316461391*I, 132.093479425268 + 221.349316461391*I]"
       ]
      },
      "metadata": {},
@@ -258,16 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "[304.883193231439 - 5.27924392834988*I, 304.883193231439 + 5.27924392834988*I]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[289.685287978922 - 37.3029340997507*I, 289.685287978922 + 37.3029340997507*I]"
+       "[128.969059542158 - 230.976564098072*I, 128.969059542158 + 230.976564098072*I]"
       ]
      },
      "metadata": {},
@@ -285,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "[269.327635783036 - 77.8473387883481*I, 269.327635783036 + 77.8473387883481*I]"
+       "[121.778583394725 - 251.266583754658*I, 121.778583394725 + 251.266583754658*I]"
       ]
      },
      "metadata": {},
@@ -294,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "[435.074290577927]"
+       "[117.704400726045 - 261.936533418232*I, 117.704400726045 + 261.936533418232*I]"
       ]
      },
      "metadata": {},
@@ -303,7 +319,16 @@
     {
      "data": {
       "text/plain": [
-       "[412.929460187810]"
+       "[113.305452677038 - 272.961334768938*I, 113.305452677038 + 272.961334768938*I]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
       ]
      },
      "metadata": {},
